# company-profile-web-chatbot

./: .gitignore  pyproject.toml
company_profile_chatbot/chatbot_api/: chatbot.py  urls.py
company_profile_chatbot/chatbot_api/templates/: main.html
company_profile_chatbot/chatbot_api/templates/components/: chat-element.html
company_profile_chatbot/company_profile_chatbot/: settings.py  urls.py
